feat: Implement initial personal CV website structure, styling, and content with new pages and assets.

--- a/Contact_me.html
+++ b/Contact_me.html
@@ -1,24 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Contact Me</title>
-    </head>
-    <body>
-        <h1>Contact Details</h1>
-        <p>Email Id: <strong><em><u>kashyapaprajita2@gmail.com</u></em></strong></p>        
-        <form action="mailto:kashyapaprajita2@gmail.com" method="post" enctype="text/plain">
-            <label>Name: </label>
-            <input type="name" name="Name" >
-            <br>
-            <label>Email: </label>
-            <input type="email" name="Email" >
-            <br>
-            <label>Contact: </label>
-            <input type="contact" name="Contact" >
-            <br>
-            <label>Message:</label><br>
-            <textarea name="Message" rows="10" cols="30" wrap="hard"></textarea>
-            <input type="submit" onclick="button">
-        </form>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Contact Me</title>
+    <link rel="icon" type="image/png" href="favicon.png">
+</head>
+
+<body>
+    <h1>Contact Details</h1>
+    <p>Email Id: <strong><em><u>kashyapaprajita2@gmail.com</u></em></strong></p>
+    <form action="mailto:kashyapaprajita2@gmail.com" method="post" enctype="text/plain">
+        <label>Name: </label>
+        <input type="name" name="Name">
+        <br>
+        <label>Email: </label>
+        <input type="email" name="Email">
+        <br>
+        <label>Contact: </label>
+        <input type="contact" name="Contact">
+        <br>
+        <label>Message:</label><br>
+        <textarea name="Message" rows="10" cols="30" wrap="hard"></textarea>
+        <input type="submit" onclick="button">
+    </form>
+</body>
+
 </html>
