--- a/debugging_prob-01.html
+++ b/debugging_prob-01.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Aprajita's website</title>
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="CSS_My-site/CSS/style.css">
 </head>
 
 <body>
@@ -20,8 +21,8 @@
                         <em>Student at <strong><a href="https://www.upes.ac.in/">UPES, Dehradun.</a></strong> </em>
                     </p>
                     <p>
-                        I am a Sophomore at UPES, Dehradun. Currently, I am pursuing Btech in CSE and will be
-                        specialised in FULL STACK DEVELOPMENT.
+                        I am a pre final year Student at UPES, Dehradun. Currently, I am pursuing Btech in CSE and will
+                        be specialised in FULL STACK DEVELOPMENT.
                     </p>
                 </td>
             </tr>
