--- a/Contact_me.html
+++ b/Contact_me.html
@@ -1,29 +1,58 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Contact Me</title>
+    <title>Contact | Aprajita Kashyap</title>
     <link rel="icon" type="image/png" href="favicon.png">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <h1>Contact Details</h1>
-    <p>Email Id: <strong><em><u>kashyapaprajita2@gmail.com</u></em></strong></p>
+
+    <h1>Contact Me</h1>
+    <p>
+        Feel free to reach out if you want to collaborate, discuss projects, or just connect.
+    </p>
+
+    <p>
+        📧 Email: <strong>kashyapaprajita2@gmail.com</strong><br>
+        💻 GitHub: github.com/aprajitakashyap<br>
+        💼 LinkedIn: linkedin.com/in/aprajitakashyap
+    </p>
+
+    <hr>
+
+    <h2>Send Me a Message</h2>
+
     <form action="mailto:kashyapaprajita2@gmail.com" method="post" enctype="text/plain">
-        <label>Name: </label>
-        <input type="name" name="Name">
-        <br>
-        <label>Email: </label>
-        <input type="email" name="Email">
-        <br>
-        <label>Contact: </label>
-        <input type="contact" name="Contact">
-        <br>
-        <label>Message:</label><br>
-        <textarea name="Message" rows="10" cols="30" wrap="hard"></textarea>
-        <input type="submit" onclick="button">
+
+        <label for="name">Name:</label><br>
+        <input type="text" id="name" name="Name" required>
+        <br><br>
+
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="Email" required>
+        <br><br>
+
+        <label for="contact">Contact Number:</label><br>
+        <input type="tel" id="contact" name="Contact">
+        <br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="Message" rows="8" cols="40" required></textarea>
+        <br><br>
+
+        <input type="submit" value="Send Message">
+
     </form>
+
+    <hr>
+
+    <p>
+        <a href="index.html">← Back to Home</a>
+    </p>
+
 </body>
 
 </html>
